<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ppid_rl_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.google.android.gms.example.apidemo.DFPPPIDFragment">

    <TextView
        android:id="@+id/ppid_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:text="@string/ppid_fragment_title"
        android:textAppearance="@android:style/TextAppearance.Large" />

    <LinearLayout
        android:id="@+id/ppid_ll_inner"
        android:layout_below="@id/ppid_tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ppid_tv_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ppid_username"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/ppid_et_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/ppid_username_hint" />

        <Button
            android:id="@+id/ppid_btn_loadad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="@string/ppid_loadad" />
    </LinearLayout>

    <com.google.android.gms.ads.doubleclick.PublisherAdView
        android:id="@+id/ppid_pav_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/ppid_adunitid" />

</RelativeLayout>
