<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/exclusions_rl_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.google.android.gms.example.apidemo.DFPCategoryExclusionFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:text="@string/categoryexclusion_fragment_title"
        android:textAppearance="@android:style/TextAppearance.Large" />

    <TextView
        android:id="@+id/no_exclusions_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:text="@string/categoryexclusion_noexclusions"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <com.google.android.gms.ads.doubleclick.PublisherAdView
        android:id="@+id/no_exclusions_av"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        ads:adSize="BANNER"
        ads:adUnitId="@string/categoryexclusion_adunitid" />

    <TextView
        android:id="@+id/exclusions_tv_dogsexcluded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="30dp"
        android:text="@string/categoryexclusion_dogsexcluded"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <com.google.android.gms.ads.doubleclick.PublisherAdView
        android:id="@+id/exclusions_av_dogsexcluded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        ads:adSize="BANNER"
        ads:adUnitId="@string/categoryexclusion_adunitid" />

    <TextView
        android:id="@+id/exclusions_tv_catsexcluded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="30dp"
        android:text="@string/categoryexclusion_catsexcluded"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <com.google.android.gms.ads.doubleclick.PublisherAdView
        android:id="@+id/exclusions_av_catsexcluded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        ads:adSize="BANNER"
        ads:adUnitId="@string/categoryexclusion_adunitid" />

</LinearLayout>
